--- a/robolectric-shadows/shadows-support-v4/pom.xml
+++ b/robolectric-shadows/shadows-support-v4/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-shadows</artifactId>
-    <version>3.2-SNAPSHOT</version>
+    <version>3.2-gradle-SNAPSHOT</version>
   </parent>
 
   <artifactId>shadows-support-v4</artifactId>
