--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ allprojects {
             exceptionFormat "short"
 
             info {
-                events "started", "skipped", "failed"
+                events "skipped", "failed"
                 exceptionFormat "full"
             }
         }
@@ -75,21 +75,15 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
     def robolectricVersion = AndroidSdk.versions[androidApi]
     logger.info "[${project.name}] Android API is $androidApi — $robolectricVersion"
 
-    shadows {
-        packageName "org.robolectric"
-    }
-
     task velocity(type: VelocityTask) {
         def shadowsCoreProject = project.findProject(":robolectric-shadows/shadows-core")
         source = shadowsCoreProject.files("src/main/resources").asFileTree.matching { include "/**/*.vm" }
 
-        doFirst {
-            contextValues = [api: androidApi]
-            if (androidApi >= 21) {
-                contextValues.putAll(ptrClass: "long", ptrClassBoxed: "Long")
-            } else {
-                contextValues.putAll(ptrClass: "int", ptrClassBoxed: "Integer")
-            }
+        contextValues = [api: androidApi]
+        if (androidApi >= 21) {
+            contextValues.putAll(ptrClass: "long", ptrClassBoxed: "Long")
+        } else {
+            contextValues.putAll(ptrClass: "int", ptrClassBoxed: "Integer")
         }
 
         outputDir = project.file("${project.buildDir}/generated-shadows")
@@ -106,6 +100,10 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
                 into project.file("${project.buildDir}/resources/main")
             }
         }
+    }
+
+    shadows {
+        packageName "org.robolectric"
     }
 
     generateShadowProvider {
@@ -133,11 +131,6 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
         jni "com.github.axet.litedb:libsqlite:0.282-3:natives-linux-x86_64"
         jni "com.github.axet.litedb:libsqlite:0.282-3:natives-windows-x86"
         jni "com.github.axet.litedb:libsqlite:0.282-3:natives-windows-x86_64"
-
-        // Testing dependencies
-        testCompile "junit:junit:4.8.2"
-        testCompile "org.hamcrest:hamcrest-core:1.3"
-        testCompile "org.assertj:assertj-core:2.0.0"
     }
 
     task copyNatives(type: Copy) {
