--- a/robolectric-processor/build.gradle
+++ b/robolectric-processor/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     compile project(":robolectric-annotations")
 
     // Compile dependencies
-    compile "com.google.guava:guava:19.0-rc2"
+    compile "com.google.guava:guava:19.0"
     provided "com.intellij:annotations:12.0"
     compile files("${System.properties['java.home']}/../lib/tools.jar")
 
