--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: android
 
-jdk:
-  - oraclejdk7
-  - oraclejdk8
+jdk: oraclejdk8
+
 env:
   matrix: # split into multiple Travis builds:
-    - APIs=16,17,18,19,21 # 20 isn't supported
-    - APIs=22,23,24,25,26
+    - JDK=oraclejdk7 APIs=16,17,18,19,21,22,23 # 20 isn't supported
+    - JDK=oraclejdk8 APIs=16,17,18,19,21 # 20 isn't supported
+    - JDK=oraclejdk8 APIs=22,23,24,25,26
   global:
     - MALLOC_ARENA_MAX=2 # reduce memory usage, maybe avoid some exit 137's?
     - secure: "AnsdYjHIvtLXrDMJmlf5FJhXJOW+aLSvsyXcGFLKse6EcwTSw8XnE4bGv2eSi2YWIwoHHCStIQbI0J02rkmUu9Z5oChxhOyGtCd8U4l1XciH2U7vJOJ/i9Auw5WgLM6x8HxgH6myhNrA9xrB4fcH+8WsDMf+qLqgvJQQjqQZQGM="
@@ -29,8 +29,10 @@ before_install:
   - ./scripts/install-dependencies.rb
 
 script:
-    - ./gradlew clean assemble install compileTest --info --stacktrace
-    - ./gradlew test --continue --info --stacktrace -Drobolectric.enabledSdks=$APIs
+  - ./gradlew clean assemble install compileTest --info --stacktrace
+  - jdk_switcher use $JDK
+  - ./gradlew test --continue --info --stacktrace -Drobolectric.enabledSdks=$APIs
+  - jdk_switcher use oraclejdk8
 
 after_success:
   - ./scripts/deploy-snapshot.sh
